[package]
name = "reth-database-reader"
version = "0.1.0"
edition = "2021"

#[[bin]]
#name = "example"
#path = "src/example.rs"

#[[bin]]
#name = "gcp-bigquery"
#path = "src/gcp_bigquery.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
tokio = { version = "1", features = ["full"] }
reth-db = { git = "https://github.com/paradigmxyz/reth", package = "reth-db" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives" }
reth_provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider" }
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth" }
csv = "1.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
alloy-sol-types = { git = "https://github.com/alloy-rs/core", package = "alloy-sol-types" }
clap = { version = "4.2.5", features = ["derive"] }
tokio-postgres = "0.7.2"
log = "0.4"
env_logger = "0.10"
regex = "1.5"
futures = "0.3"
rayon = "1.5"
uuid = { version = "1.3.2", features = ["v4", "serde"] }
lazy_static = "1.4.0"
rust_decimal = { version = "1.30.0", features = ["db-tokio-postgres"] }
gcp-bigquery-client = "0.17.0"
jemallocator = { version = "0.5.0", optional = true }
jemalloc-ctl = { version = "0.5.0", optional = true }
phf = { version = "0.11.2", features = ["macros"] }
indexmap = "2.0.0"
serde_with = "3.3.0"
polars = { version = "0.33.0", features = ["dtype-datetime", "lazy", "describe", "serde", "json", "temporal"]}
chrono = "0.4.31"
once_cell = "1.18.0"
async-trait = "0.1.74"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

[features]
jemalloc = ["dep:jemallocator", "dep:jemalloc-ctl"]
